--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       src="https://kit.fontawesome.com/c5531486fa.js"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker.register("./sw.js");
+        });
+      }
+    </script>
     <title>Calculator</title>
   </head>
   <body>
