--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="assets/icons8-calculate-48.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/Calculator/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/c5531486fa.js"
       crossorigin="anonymous"
@@ -52,6 +52,6 @@
         <button class="operand">=</button>
       </div>
     </div>
-    <script src="/Calculator/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
