--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="manifest" href="manifest.json" />
     <script
       src="https://kit.fontawesome.com/c5531486fa.js"
       crossorigin="anonymous"
