--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button>3</button>
         <button class="operand">+</button>
         <button>0</button>
-        <button class="operand">.</button>
+        <button>.</button>
         <button class="operand"></button>
         <button class="operand">=</button>
       </div>
