--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="controls">
         <button class="operand">C</button>
         <button class="operand" id="backspace">
-          <img src="/Calculator/assets/delete-left-solid.svg" alt="" />
+          <i class="fa fa-arrow-circle-left"></i>
         </button>
         <button class="operand">%</button>
         <button class="operand">÷</button>
@@ -45,7 +45,8 @@
         <button class="operand">+</button>
         <button>0</button>
         <button>.</button>
-        <button class="operand"></button>
+        <button><i class="fas fa-power-off"></i></button>
+
         <button class="operand">=</button>
       </div>
     </div>
