add delete function

--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
     <div class="calculator">
       <div class="displayScreen"></div>
       <div class="controls">
-        <button class="operand">C</button>
-        <button class="operand" id="backspace">
-          <i class="fa fa-arrow-circle-left"></i>
-        </button>
+        <button class="operand">Clc</button>
+        <button class="operand">Del</button>
         <button class="operand">%</button>
         <button class="operand">÷</button>
         <button>7</button>
